# tocantins-framework

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-publish.yml
docs/: BAND_MAPPING.md
examples/: README.md  advanced_configuration.py  basic_landsat8_analysis.py  landsat5_custom_mapping.py
src/impact_score/: __init__.py
src/tocantins_framework/: __init__.py  anomaly_detection.py  calculator.py  morphology.py  preprocessing.py
src/tocantins_index/: __init__.py  anomaly_detection.py  calculator.py  metrics.py  morphology.py
src/tocantins_index/impact_score/: calculator.py  metrics.py
