# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tocantins-index"
version = "1.0.0"
authors = [
  { name="Isaque Carvalho Borges", email="isaque@ecoacaobrasil.org" },
]
description = "A package for the calculation of the Tocantins Index, a compounded metric of intra-urban heat anomalies in Landsat imagery."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "rasterio>=1.2.0",
    "scikit-learn>=1.0.0",
    "scikit-image>=0.18.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/EcoAcao-Brasil/Tocantins-Index"
"Bug Reports" = "https://github.com/EcoAcao-Brasil/Tocantins-Index/issues"
Source = "https://github.com/EcoAcao-Brasil/Tocantins-Index"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]

[tool.setuptools]
package-dir = {"" = "src"}
